# xlcsv

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci-fmt.yaml  ci-lint.yaml  ci-test.yaml  ci.yaml
src/xlcsv/: io.py
tests/: test.xlsx  test_convert.py  test_version.py
tests/bench/: excel_io.py
xlcsv/: __init__.py  error.py  io.py  utils.py
