[tool.poetry]
name = "xlcsv"
version = "0.2.2"
description = "A Python micropackage for consuming Excel as CSV."
repository = "https://github.com/cnpryer/xlcsv.git"
readme = "./README.md"
authors = ["Chris Pryer <cnpryer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
black = "^22.3.0"
mypy = "^0.961"
isort = "^5.10.1"
polars = "^0.13.44"
pre-commit = "^2.19.0"
pandas = "^1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.mypy]
ignore_missing_imports = "True"