[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xlcsv"
version = "0.3.0"
description = "A Python micropackage for consuming Excel as CSV."
readme = "README.md"
license = {file = "LICENSE"}
dependencies= ["openpyxl==3.1.0"]

[project.optional-dependencies]
dev = [
    "pytest==7.1.2",
    "black==22.3.0",
    "isort==5.10.1",
    "pre-commit==2.19.0",
    "xlsx2csv==0.8.0",
    "polars==0.16.2",
    "pandas==1.5.3",
    "mypy==0.991",
    "ruff==0.0.240",
]

[[project.authors]]
name = "Chris Pryer"
email = "cnpryer@gmail.com"

[tool.black]
line-length = 79

[tool.mypy]
exclude = [".mypy_cache", ".pytest_cache", ".ruff_cache", ".venv"]