[project]
name = "xlcsv"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Chris Pryer", email = "cnpryer@gmail.com" }
]
dependencies = ["openpyxl~=3.1.2"]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest~=7.3.1", "ruff~=0.0.263", "black~=23.3.0", "mypy~=1.2.0", "polars~=0.17.9", "pandas~=2.0.1", "xlsx2csv~=0.8.1"]
